<resources>
    <string name="app_name">OCR Demo</string>


    <string name="action_show_text_bounds">Show text bounds</string>
    <string name="progress_message_ocr">Text recognition in progress&#8230;</string>
    <string name="button_perform_ocr">Scan</string>

    <string name="dialog_ocr_title">OCR Result</string>
    <string name="dialog_ocr_button">Dismiss</string>
    <string name="action_recognition_enhancement">Recognition Enhancement</string>
    <string name="error_no_permission">Missing required permission.</string>
    <string name="action_allow_digit_only">Allow Digit Only</string>
    <string name="action_recognition_mode">Recognition Mode</string>
    <string name="action_trained_data">Trained Data</string>
</resources>
