<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_show_bounds"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="100"
        android:title="@string/action_show_text_bounds"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_recognition_enhancement"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="101"
        android:title="@string/action_recognition_enhancement"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_allow_digit_only"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="102"
        android:title="@string/action_allow_digit_only"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_recognition_mode"
        android:orderInCategory="103"
        android:title="@string/action_recognition_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_trained_data"
        android:orderInCategory="104"
        android:title="@string/action_trained_data"
        app:showAsAction="never" />

</menu>
